--- a/E621Scraper/E621Scraper.csproj
+++ b/E621Scraper/E621Scraper.csproj
@@ -7,4 +7,8 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Flurl" Version="3.0.2" />
+    </ItemGroup>
+
 </Project>
