Add end of day commits

--- a/E621Scraper/E621Scraper.csproj
+++ b/E621Scraper/E621Scraper.csproj
@@ -4,12 +4,14 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Flurl" Version="3.0.2"/>
         <PackageReference Include="Flurl.Http" Version="3.2.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+        <PackageReference Include="SQLite" Version="3.13.0"/>
     </ItemGroup>
 
 </Project>
