--- a/E621TelegramBot/E621TelegramBot.csproj
+++ b/E621TelegramBot/E621TelegramBot.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="Telegram.Bot" Version="17.0.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\E621Shared\E621Shared.csproj"/>
+    </ItemGroup>
+
 </Project>
