--- a/E621TelegramBot/E621TelegramBot.csproj
+++ b/E621TelegramBot/E621TelegramBot.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="SQLite" Version="3.13.0"/>
         <PackageReference Include="Telegram.Bot" Version="17.0.0"/>
+        <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.1"/>
     </ItemGroup>
 
     <ItemGroup>
