--- a/E621TelegramBot/E621TelegramBot.csproj
+++ b/E621TelegramBot/E621TelegramBot.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0"/>
         <PackageReference Include="SQLite" Version="3.13.0"/>
         <PackageReference Include="Telegram.Bot" Version="17.0.0"/>
         <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.1"/>
