Refactor Api and ScraperService. Added the ScraperRepo into the service. Changed the point where scraper delays.

--- a/E621Scraper/appsettings.json
+++ b/E621Scraper/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ApiConfig": {
-    "Username": "foo",
-    "Password": "blah"
+    "Username": "<Your E621 Username>",
+    "ApiKey": "<Your E621 Api Key>"
   }
-
 }
