Better support for standard .net log levels

--- a/E621Scraper/appsettings.json
+++ b/E621Scraper/appsettings.json
@@ -2,5 +2,13 @@
   "ApiConfig": {
     "Username": "<Your E621 Username>",
     "ApiKey": "<Your E621 Api Key>"
+  },
+  "ScraperConfig": {
+    "PollIntervalSeconds": 5
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug"
+    }
   }
 }
