--- a/E621TelegramBot/E621TelegramBot.csproj
+++ b/E621TelegramBot/E621TelegramBot.csproj
@@ -7,14 +7,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0"/>
-        <PackageReference Include="SQLite" Version="3.13.0"/>
-        <PackageReference Include="Telegram.Bot" Version="17.0.0"/>
-        <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+        <PackageReference Include="SQLite" Version="3.13.0" />
+        <PackageReference Include="Telegram.Bot" Version="17.0.0" />
+        <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\E621Shared\E621Shared.csproj"/>
+        <ProjectReference Include="..\E621Shared\E621Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
