Makes api key and username optional

--- a/E621Scraper/appsettings.json
+++ b/E621Scraper/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ApiConfig": {
-    "Username": "<Your E621 Username>",
-    "ApiKey": "<Your E621 Api Key>"
+    "Username": "",   //E621UserName, optional
+    "ApiKey": ""      //E621ApiKey, optional
   },
   "ScraperConfig": {
     "PollIntervalSeconds": 5
