Normalise with stylecop

--- a/E621Scraper/appsettings.json
+++ b/E621Scraper/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ApiConfig": {
-    "Username": "",   //E621UserName, optional
-    "ApiKey": ""      //E621ApiKey, optional
+    "Username": "",
+    // E621UserName, optional
+    "ApiKey": ""
+    // E621ApiKey, optional
   },
   "ScraperConfig": {
     "PollIntervalSeconds": 5
