--- a/E621Shared/E621Shared.csproj
+++ b/E621Shared/E621Shared.csproj
@@ -7,6 +7,8 @@
 
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.0.123"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0"/>
         <PackageReference Include="SQLite" Version="3.13.0"/>
         <PackageReference Include="System.Data.SQLite" Version="1.0.115.5"/>
     </ItemGroup>
