Add telegram API key loading

--- a/E621TelegramBot/appsettings.json
+++ b/E621TelegramBot/appsettings.json
@@ -1,5 +1,7 @@
 {
   "BotConfig": {
+    // Add your bots API key here collected from the @BotFather
+    "ApiKey": ""
   },
   "Logging": {
     "LogLevel": {
