--- a/E621Shared/E621Shared.csproj
+++ b/E621Shared/E621Shared.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.0.123"/>
+        <PackageReference Include="Dapper.Contrib" Version="2.0.78"/>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0"/>
