Created an interesting thing to support conversations in a bot

--- a/E621TelegramBot/appsettings.json
+++ b/E621TelegramBot/appsettings.json
@@ -1,6 +1,6 @@
 {
   "BotConfig": {
-    "ApiKey": ""
+    "ApiKey": "1280858404:AAHD1NzDxfQrRVc7O0MqV1F2ZKTdLIJQ9A4"
   },
   "Logging": {
     "LogLevel": {
