--- a/E621TelegramBot/E621TelegramBot.csproj
+++ b/E621TelegramBot/E621TelegramBot.csproj
@@ -13,10 +13,12 @@
         <PackageReference Include="SQLite" Version="3.13.0"/>
         <PackageReference Include="Telegram.Bot" Version="17.0.0"/>
         <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\E621Shared\E621Shared.csproj"/>
+        <ProjectReference Include="..\E621Shared\E621Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
