--- a/E621Scraper/E621Scraper.csproj
+++ b/E621Scraper/E621Scraper.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Flurl.Http" Version="3.2.0"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+        <PackageReference Include="Telegram.Bot" Version="17.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
