Change the poll time to be a timespan and updated the default app settings

--- a/E621Scraper/appsettings.json
+++ b/E621Scraper/appsettings.json
@@ -1,12 +1,16 @@
 {
-  "ApiConfig": {
-    "Username": "",
-    // E621UserName, optional
+  "BotConfig": {
+    // Add your bots API key here collected from the @BotFather
     "ApiKey": ""
+  },
+  "ApiConfig": {
+    // E621UserName, optional
+    "Username": "",
     // E621ApiKey, optional
+    "ApiKey": ""
   },
   "ScraperConfig": {
-    "PollIntervalSeconds": 5
+    "PollInterval": "00:01:00"
   },
   "Logging": {
     "LogLevel": {
